// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`browser.components.CardTest > Snapshot Tests > Should match snapshot for default card > Default card 1`] = `
<DocumentFragment>
  <div
    class="tox"
  >
    <div
      aria-pressed="false"
      class="tox-card"
      role="button"
      aria-label="Card"
      tabindex="0"
    >
      <div
        class="tox-card__header"
      >
        Test Header
      </div>
      <div
        class="tox-card__body"
      >
        Test content
      </div>
      <div
        class="tox-card__actions tox-card__actions--flex-start"
      >
        <button
          class="tox-button tox-button--secondary--outline "
          type="button"
        >
          Skip
        </button>
        <button
          class="tox-button tox-button--secondary--outline "
          type="button"
        >
          Apply
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`browser.components.CardTest > Snapshot Tests > Should match snapshot for selected card > Selected card 1`] = `
<DocumentFragment>
  <div
    class="tox"
  >
    <div
      aria-pressed="true"
      class="tox-card tox-card--selected"
      role="button"
      aria-label="Card"
      tabindex="0"
    >
      <div
        class="tox-card__header"
      >
        Selected Card
      </div>
      <div
        class="tox-card__body"
      >
        Selected content
      </div>
      <div
        class="tox-card__actions tox-card__actions--flex-start"
      >
        <button
          class="tox-button tox-button--secondary--outline "
          type="button"
        >
          Skip
        </button>
        <button
          class="tox-button tox-button--secondary--outline "
          type="button"
        >
          Apply
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
